@@ -44,6 +44,8 @@ Version 1.13.8+dev:
    * Fix [scroll] with omitted x or y
    * Fix [story] not showing if all parts are conditional
    * Fix some hotkeys not working (issues #1737 and #1769)
+   * New vision_cost and jamming_cost keys in SUF
+   * Integer SUF keys (eg level) now accept a list of ranges
 
 Version 1.13.8:
   * Campaigns:
